# glfos-welcome-screen

./: .env  .flutter-plugins  .gitignore  README.md  buildAppImage.sh  buildAppImageWithDebug.sh  buildNixDerivation.sh  default.nix  flake.nix  getGlfSha256.sh  glfos_welcome_screen.nix  meson.build  package_config.json  pubspec.nix  pubspec.yaml
appImage/: AppRun  glfosWelcomeScreen.desktop
assets/glf/pkgs/: default.nix
assets/i18n/: en.po  fr.po
assets/localizations/: en.json  fr.json
assets/localizations/markdowns/en/: page_baseprocess_body.md  page_diskmanager_body.md  page_help_body.md  page_home_body.md
assets/localizations/markdowns/en_US/: page_easyflatpak_body.md  page_firewallmanager_body.md  page_help_body.md  page_home_body.md  page_sambashare_body.md  page_studio_body.md
assets/localizations/markdowns/fr/: page_baseprocess_body.md  page_desktopselector_body.md  (+9 more)
data/: glfos-welcome-screen.desktop  meson.build
lib/: main.dart  welcome_screen.dart
lib/Api/: localization_api.dart
lib/View/: baseProcess_view.dart  desktopselector_view.dart  diskmanger_view.dart  easyflatpak_view.dart  firewall_view.dart  gaming_view.dart  help_view.dart  home_view.dart  powerusers_view.dart  sambashare_view.dart  studio_view.dart  updates_view.dart  usefulinformation_view.dart
lib/View/Shared/: sharedmarkdown_view.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
src/: config.py  main.py  meson.build
src/infrastructure/api/: launcher.py  localization.py
src/infrastructure/ui/: markdown_renderer.py  page_view.py  window.py
(+13 files in other folders)
