# Desktop file
install_data(
  'glfos-welcome-screen.desktop',
  install_dir: get_option('datadir') / 'applications',
)

# Icons
install_data(
  '../src/assets/images/glf-logo-128.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '128x128' / 'apps',
  rename: 'glfos-welcome-screen.png',
)

install_data(
  '../src/assets/images/glf-logo-256.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '256x256' / 'apps',
  rename: 'glfos-welcome-screen.png',
)

install_data(
  '../src/assets/images/512x512.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '512x512' / 'apps',
  rename: 'glfos-welcome-screen.png',
)
